# aionforge-memory

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.release  NOTICE  README.md  THIRDPARTY.md  about.hbs  about.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  test_jiff_behavior.rs
.cargo/: config.toml
.claude-plugin/: marketplace.json
.config/: nextest.toml
.cursor-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-file-size.sh  check-no-gql-interpolation.sh  check-no-secrets.sh  check-plugin-package.sh  check-release-acceptance.sh  check-store-only-selene.sh  check-thirdparty-current.sh
.github/workflows/: ci.yml  nightly.yml  release-gate.yml  release-publish.yml  release.yml
crates/aionforge/: Cargo.toml
crates/aionforge-auth/: Cargo.toml
crates/aionforge-capture/: Cargo.toml
crates/aionforge-capture/src/: capturer.rs  config.rs  lib.rs
crates/aionforge-capture/tests/: capture.rs
crates/aionforge-chat/: Cargo.toml
crates/aionforge-chat/src/: anthropic.rs  client.rs  error.rs  lib.rs  openai_chat.rs  openai_responses.rs  provider.rs
crates/aionforge-chat/tests/: chat.rs
crates/aionforge-cli/: Cargo.toml
crates/aionforge-cli/src/: cli.rs  doctor.rs  main.rs  serve.rs
crates/aionforge-config/: Cargo.toml
crates/aionforge-config/src/: config.rs  core_block.rs  error.rs  forgetting.rs  lib.rs
crates/aionforge-config/tests/: config.rs
crates/aionforge-consolidate/: Cargo.toml
crates/aionforge-consolidate/src/: audit.rs  clock.rs  config.rs  detect.rs  distill.rs  error.rs  fact_extraction.rs  lag.rs  lib.rs  llm_link_evolver.rs  llm_summarizer.rs  merge.rs  pass.rs  resolve.rs  rule_extractor.rs  rule_inducer.rs  rule_link_evolver.rs  scheduler.rs  summarize.rs
crates/aionforge-consolidate/src/detect/: tests.rs
crates/aionforge-consolidate/tests/: convergence.rs  detection.rs  distill.rs  extraction.rs  scheduler.rs
crates/aionforge-consolidate/tests/common/: mod.rs
crates/aionforge-domain/: Cargo.toml
crates/aionforge-domain/src/: blocks.rs  completion.rs  contracts.rs  decay.rs  edges.rs  embedding.rs  error.rs  ids.rs  lib.rs  namespace.rs  signing.rs  time.rs  value.rs  verify.rs
crates/aionforge-domain/tests/: round_trip.proptest-regressions  round_trip.rs  vocabulary.rs
crates/aionforge-embed/: Cargo.toml
crates/aionforge-embed/src/: lib.rs
crates/aionforge-engine/: Cargo.toml
crates/aionforge-engine/src/: core_block.rs  erase.rs  guard.rs  lib.rs  reliability_sweep.rs
crates/aionforge-engine/tests/: audit_signing.rs  consolidation.rs  core_block_acceptance.rs  erase_acceptance.rs  promotion.rs  reliability.rs  reliability_sweep.rs  smoke.rs  startup_warning.rs
crates/aionforge-forget/: Cargo.toml
crates/aionforge-forget/src/: audit_addr.rs  forgetter.rs  lib.rs
crates/aionforge-mcp/: Cargo.toml
crates/aionforge-mcp/src/: http_transport.rs  inspect.rs  lib.rs  lifecycle.rs  principal.rs  prompt.rs  resources.rs  status.rs  surface.rs  tools.rs  work.rs
crates/aionforge-mcp/tests/: http_transport.rs  lifecycle.rs  mcp.rs  principal_manifest.rs  read_memory.rs  resources.rs  token_budget.rs
crates/aionforge-procedural/: Cargo.toml
crates/aionforge-procedural/src/: lib.rs
crates/aionforge-retrieval/: Cargo.toml
crates/aionforge-retrieval/src/: bundle.rs  error.rs  lib.rs  precision.rs  query.rs  retriever.rs  router.rs  signals.rs  trace.rs
crates/aionforge-retrieval/tests/: bitemporal.rs  conditioning.rs  core_block_recall.rs  graph_expansion.rs  precision.rs  project_corpus.rs  recall.rs  router.rs  signals.rs  support_expansion.rs
crates/aionforge-security/: Cargo.toml
crates/aionforge-security/src/: error.rs  filter.rs  lib.rs
crates/aionforge-security/tests/: filter.rs  injection_corpus.rs
crates/aionforge-store/: Cargo.toml
crates/aionforge-store/src/: attestation.rs  audit.rs  capture_write.rs  catalog.rs  (+25 more)
crates/aionforge-trust/: Cargo.toml
crates/aionforge-trust/src/: core_editor.rs  lib.rs  promoter.rs  system_audit.rs
crates/aionforge-trust/src/promoter/: tests.rs
crates/aionforge-trust/tests/: core_editor.rs  core_editor_hardening.rs  reliability_demotion.rs  reliability_scorer.rs
crates/aionforge-trust/tests/common/: mod.rs
crates/aionforge-tui/: Cargo.toml
docs/: README.md  apple-container.md  attestation-and-promotion.md  capture.md  concurrent-merge.md  consolidation.md  core-memory.md  decay-and-importance.md  distillation.md  erasure.md  forgetting.md  getting-started.md  honest-scope.md  mcp-clients.md  namespace-authorization.md  observability.md  operations-recovery.md  plugins.md  provenance-signing.md  red-team.md  retrieval.md  security-model.md  trust-model.md
plugins/aionforge-memory/: README.md  codex.plugin-policy.example.toml
scripts/: container-dev.sh  install-hooks.sh
third-party-data/: README.md
(+43 files in other folders)
