[package]
name = "aionforge-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenAI-compatible embedding/chat/rerank client with order-preserving batching and write-path normalization."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
aionforge-store = { path = "../aionforge-store", version = "0.1.0" }

[lints]
workspace = true
